crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__errors__bare-hash.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..2
  run "#" @0..1
  run "1" @1..2
-- problems --
