crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__errors__double-subscript.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..5
  row @0..5
    scripts Auto @0..5
      run "x" @0..1
      sub:
        run "1" @2..3
    error "double subscript" "2" @4..5
-- problems --
DoubleScript @4..5 double subscript
