crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__errors__env-mismatch.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..29
  error "`\\begin{aligned}` closed by `\\end{cases}`" "\\begin{aligned} x \\end{cases}" @0..29
-- problems --
EnvironmentMismatch @0..29 `\begin{aligned}` closed by `\end{cases}`
