crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__errors__left-without-right.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..8
  row @0..8
    delimited "(" "." @0..8
      row @7..8
        run "x" @7..8
    error "unbalanced \\left/\\right" "\\left( x" @0..8
-- problems --
UnbalancedDelimiter @0..8 `\left` without a matching `\right`
