crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__errors__lone-underscore.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..2
  scripts Auto @0..2
    row @-
    sub:
      run "i" @1..2
-- problems --
