crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__errors__macro-arity-mismatch.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..36
  error "invalid number of arguments" "invalid number of arguments" @-
-- problems --
ArityMismatch @- invalid number of arguments
