crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__errors__missing-arg.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..8
  error "`\\frac` is missing an argument" "\\frac{a}" @0..8
-- problems --
ArityMismatch @0..8 `\frac` is missing an argument
