crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__errors__only-whitespace.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..3
-- problems --
